shared/Source/CadDll/sgcadimage.pas


var
  CADImageInst: THandle = 0;
  CADAddXRef: TCADAddXRef = nil;
  CADLayer: TCADLayer = nil;
  CADLayerCount: TCADLayerCount = nil;
  CADLayerVisible: TCADLayerVisible = nil;
  CADLayoutsCount: TCADLayoutsCount = nil;
  CADLayoutName: TCADLayoutName = nil;
  CADLayout: TCADLayout = nil;
  CloseCAD: TCloseCAD = nil;
  CreateCAD: TCreateCAD = nil;
  CurrentLayoutCAD: TCurrentLayoutCAD = nil;
  DefaultLayoutIndex: TDefaultLayoutIndex = nil;
  DrawCAD: TDrawCAD = nil;
  DrawCADEx: TDrawCADEx = nil;
  GetBoxCAD: TGetBoxCAD = nil;
  GetCADCoords: TGetCADCoords = nil;
  GetExtentsCAD: TGetExtentsCAD = nil;
  GetIs3dCAD: TGetIs3dCAD = nil;
  GetLastErrorCAD: TGetLastErrorCAD = nil;
  GetNearestEntity: TGetNearestEntity = nil;
  GetNearestEntityWCS: TGetNearestEntityWCS = nil;
  GetPlugInInfo: TGetPlugInInfo = nil;
  ResetDrawingBoxCAD: TResetDrawingBoxCAD = nil;
  SaveCADtoBitmap: TSaveCADtoBitmap = nil;
  SaveCADtoCAD: TSaveCADtoCAD = nil;
  SaveCADtoGif: TSaveCADtoGif = nil;
  SaveCADtoJpeg: TSaveCADtoJpeg = nil;
  SaveCADtoPNG: TSaveCADtoPNG = nil;
  SaveCadtoFile: TSaveCADtoFile = nil;
  SetBlackWhite: TSetBlackWhite = nil;
  SetCADBorderType: TSetCADBorderType = nil;
  SetCADBorderSize: TSetCADBorderSize = nil;
  SetDefaultColor: TSetDefaultColor = nil;
  SetDrawingBoxCAD: TSetDrawingBoxCAD = nil;
  SetProcessMessagesCAD: TSetProcessMessagesCAD = nil;
  SetProgressProc: TSetProgressProc= nil;
  StopLoading: TStopLoading = nil;
  GetSupportedExts: TGetSupportedExts = nil;
  StRgW: TStRgW = nil;
  StRgA: TStRgA = nil;
  StRg: TStRg = nil;
  SetShowLineWeightCAD: TSetShowLineWeightCAD = nil;
  SaveCADtoFileWithXMLParams: TSaveCADtoFileWithXMLParams = nil;
  SaveCADWithXMLParametrs: TSaveCADWithXMLParametrs = nil;
  ProcessXML: TProcessXML = nil;
  CADSetSHXOptions: TCADSetSHXOptions = nil;
  CADSetViewPort: TCADSetViewPort = nil;
  CADGetAutoRegenMode: TCADGetAutoRegenMode = nil;
  CADSetAutoRegenMode: TCADSetAutoRegenMode = nil;
  CADGetNumberOfParts: TCADGetNumberOfParts = nil;
  CADSetNumberOfParts: TCADSetNumberOfParts = nil;
{$ELSE}
  function CADAddXRef(AImage, AXrefImage: THandle; AName: PWideChar;
    const Position, Scale: TFPoint;
    const Rotation: Double; ResultInsert: PHandle): Integer; stdcall; external CADImage name 'CADAddXRef';
  function CADLayer(Handle: THandle; Index: DWORD;
    Data: PcadData): THandle; stdcall; external CADImage name 'CADLayer';
  function CADLayerCount(Handle: THandle): DWORD; stdcall;
    external CADImage name 'CADLayerCount';
  function CADLayerVisible(Handle: THandle;
    Visible: Integer): Integer; stdcall; external CADImage name 'CADLayerVisible';
  function CADLayout(Handle: THandle; Index: DWORD): THandle; stdcall;
    external CADImage name 'CADLayout';
  function CADLayoutName(Handle: THandle; Index: DWORD; Name: PWideChar; nSize: DWORD): Integer; stdcall;
    external CADImage name 'CADLayoutName';
  function CADLayoutsCount(Handle: THandle): DWORD; stdcall;
    external CADImage name 'CADLayoutsCount';
  function CADLayoutVisible(Handle: THandle; Index: DWORD; DoSetVisible, NewValue: BOOL): BOOL; stdcall;
    external CADImage name 'CADLayoutVisible';
  function CurrentLayoutCAD(Handle: THandle; Index: DWORD; DoChange: BOOL): THandle; stdcall;
    external CADImage name 'CurrentLayoutCAD';
  function CADLTScale(Handle: THandle; var AScale: Double): Integer; stdcall;
    external CADImage name 'CADLTScale';
  function CloseCAD(Handle: THandle): Integer; stdcall;
    external CADImage name 'CloseCAD';
  function CADSetSHXOptions(SearchSHXPaths, DefaultSHXPath, DefaultSHXFont: PChar; UseSHXFonts,
    UseACADPaths: BOOL): Integer; stdcall; external CADImage name 'CADSetSHXOptions';
  function CADVisible(Handle: THandle; LayerName: PWideChar): Integer; stdcall;
    external CADImage name 'CADVisible';
  function CreateCAD(Window: HWnd; FileName: PWideChar): THandle; stdcall;
    external CADImage name 'CreateCAD';
  function CreateCADEx(Window: HWnd; FileName, Param: PWideChar): THandle; stdcall;
    external CADImage name 'CreateCADEx';
  function DefaultLayoutIndex(Handle: THandle): Integer; stdcall;
    external CADImage name 'DefaultLayoutIndex';
  function DrawCAD(Handle: THandle; DC: HDC; const R: TRect): Integer; stdcall;
    external CADImage name 'DrawCAD';
  function DrawCADEx(Handle: THandle; const CADDraw: TCADDraw): Integer; stdcall;
    external CADImage name 'DrawCADEx';
  function DrawCADtoBitmap(Handle: THandle; const CADDraw: TCADDraw): THandle; stdcall;
    external CADImage name 'DrawCADtoBitmap';
  function DrawCADtoDIB(Handle: THandle; const R: TRect): THandle; stdcall;
    external CADImage name 'DrawCADtoDIB';
  function DrawCADtoGif(Handle: THandle; const CADDraw: TCADDraw): THandle; stdcall;
    external CADImage name 'DrawCADtoGif';
  function DrawCADtoJpeg(Handle: THandle; const CADDraw: TCADDraw): THandle; stdcall;
    external CADImage name 'DrawCADtoJpeg';
  function GetBoxCAD(Handle: THandle; var AbsWidth, AbsHeight: Single): Integer; stdcall;
    external CADImage name 'GetBoxCAD';
  function GetCADCoords(Handle: THandle; const AXScaled, AYScaled: Single; var Coord: TFPoint): Integer; stdcall;
    external CADImage name 'GetCADCoords';
  function GetExtentsCAD(Handle: THandle; var ARect: TFRect): Integer; stdcall;
    external CADImage name 'GetExtentsCAD';
  function GetIs3dCAD(Handle: THandle; var AIs3D: Integer): Integer; stdcall;
    external CADImage name 'GetIs3dCAD';
  function GetLastErrorCAD(Buf: PWideChar; nSize: DWORD): Integer; stdcall;
    external CADImage name 'GetLastErrorCAD';
  function GetPlugInInfo(Version: PAnsiChar; Formats: PAnsiChar): Integer; cdecl;
    external CADImage name 'GetPlugInInfo';
  function GetNearestEntity(Handle: THandle; Buf: PWideChar; nSize: DWORD; const R: TRect; var APoint: TPoint): Integer; stdcall;
    external CADImage name 'GetNearestEntity';
  function GetNearestEntityWCS(Handle: THandle; Buf: PWideChar; nSize: DWORD; const R: TRect; var APoint2D: TPoint; var APoint3D: TFPoint): Integer; stdcall;
    external CADImage name 'GetNearestEntityWCS';
  function GetPointCAD(Handle: THandle; var APoint: TFPoint): Integer; stdcall;
    external CADImage name 'GetPointCAD';
  function ReadCAD(FileName: PWideChar; ErrorText: PWideChar): THandle; cdecl;
    external CADImage name 'ReadCAD';
  function ResetDrawingBoxCAD(Handle: THandle): Integer; stdcall;
    external CADImage name 'ResetDrawingBoxCAD';
  function SaveCADtoBitmap(Handle: THandle; const CADDraw: TCADDraw; FileName: PWideChar): Integer; stdcall;
    external CADImage name 'SaveCADtoBitmap';
  function SaveCADtoJpeg(Handle: THandle; const CADDraw: TCADDraw; FileName: PWideChar): Integer; stdcall;
    external CADImage name 'SaveCADtoJpeg';
  function SaveCADtoCAD(Handle: THandle; AParam: PsgCADExportParams; FileName: PWideChar): Integer; stdcall;
    external CADImage name 'SaveCADtoCAD';
  function SaveCADtoGif(Handle: THandle; const CADDraw: TCADDraw; FileName: PWideChar): Integer; stdcall;
    external CADImage name 'SaveCADtoGif';
  function SaveCADtoPNG(Handle: THandle; const CADDraw: TCADDraw; FileName: PWideChar): Integer; stdcall;
    external CADImage name 'SaveCADtoPNG';
  function SaveCADtoFile(Handle: THandle; const CADDraw: TCADDraw; FileName: PWideChar; ImageParam: PsgImageParam): Integer; stdcall;
    external CADImage name 'SaveCADtoFile';
  function SetBMSize(Value: Integer): BOOL; cdecl;
    external CADImage name 'SetBMSize';
  function SetCADBorderType(Handle: THandle; const ABorderType: Integer): Integer; stdcall;
    external CADImage name 'SetCADBorderType';
  function SetCADBorderSize(Handle: THandle; const ABorderSize: Double): Integer; stdcall;
    external CADImage name 'SetCADBorderSize';
  function SetDefaultColor(Handle: THandle; const ADefaultColor: Integer): Integer; stdcall;
    external CADImage name 'SetDefaultColor';
  function SetDrawingBoxCAD(Handle: THandle; const ABox: TFRect): Integer; stdcall;
    external CADImage name 'SetDrawingBoxCAD';
  function SetProcessMessagesCAD(Handle: THandle; const AIsProcess: Integer): Integer; stdcall;
    external CADImage name 'SetProcessMessagesCAD';
  function SetRotateCAD(Handle: THandle; const AAngle: Single; const AAxis: Integer): Integer; stdcall;
    external CADImage name 'SetRotateCAD';
  function SetBlackWhite(Handle: THandle; CMode: Integer): Integer; stdcall;
    external CADImage name 'SetBlackWhite';
  function SetProgressProc(AProgressProc: TProgressProc): Integer; stdcall;
    external CADImage name 'SetProgressProc';
  function StopLoading: Integer; stdcall;
    external CADImage name 'StopLoading';
  function GetSupportedExts(ASupportedExts: PWideChar; ALength: PInteger): Integer; stdcall;
    external CADImage name 'GetSupportedExts';

  function StRgW(AUser, AEMail, AKey: PWideChar): Integer; stdcall;
    external CADImage name 'StRgW';
  function StRgA(AUser, AEMail, AKey: PAnsiChar): Integer; stdcall;
    external CADImage name 'StRgA';
  function StRg(AUser, AEMail, AKey: PAnsiChar): Integer; stdcall;
    external CADImage name 'StRg';

  function SetShowLineWeightCAD(hObject: THandle; AIsShow: Integer): Integer; stdcall; external CADImage name 'SetShowLineWeightCAD';


  function SaveCADtoFileWithXMLParams(Handle: THandle; const AParam: PWideChar; const AProc: TProgressProc): Integer; stdcall;
    external CADImage name 'SaveCADtoFileWithXMLParams';
  function SaveCADWithXMLParametrs(Handle: THandle; const AParam: PWideChar): Integer; stdcall;
    external CADImage name 'SaveCADWithXMLParametrs';

  function ProcessXML(AHandle: THandle; const AInputXML: PChar;
    var AOutputXML: Variant): Integer; stdcall; external CADImage name 'ProcessXML';

  function CADSetViewPort(Handle: THandle; Left, Top, Width, Height: Integer): Integer; stdcall; external CADImage name 'CADSetViewPort';

  function CADGetAutoRegenMode(Handle: THandle): Integer; stdcall; external CADImage name 'CADGetAutoRegenMode';
  function CADSetAutoRegenMode(Handle: THandle; AMode: Integer): Integer; stdcall; external CADImage name 'CADSetAutoRegenMode';

  function CADGetNumberOfParts(Handle: THandle; ASpline: PInteger; const ACircle: PInteger): Integer; stdcall; external CADImage name 'CADGetNumberOfParts';
  function CADSetNumberOfParts(Handle: THandle; ASpline: Integer; const ACircle: Integer): Integer; stdcall; external CADImage name 'CADSetNumberOfParts';
{$ENDIF}

implementation
